--- a/index.html
+++ b/index.html
@@ -1436,35 +1436,11 @@
 
     <div class="portrait-title">
       <h2><a href="/author/sydne-record/">Sydne Record</a></h2>
-      <h3>Assistant Professor, Bryn Mawr College</h3>
+      <h3>Associate Professor, Bryn Mawr College</h3>
       
       <p class="people-interests">Ecology, Ecosystems, Global Change</p>
     </div>
   </div>
-  
-  
-  
-
-  
-
-  
-  
-  
-
-  
-
-  
-  
-  
-
-  
-
-  
-  
-  
-
-  
-
   
   
 </div>
